--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.3.7",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.546.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
