--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,6 @@
 /node_modules
 .env
+AUTO_PLAN_AND_STREAK_IMPLEMENTATION.md
+AUTO_PLAN_STREAK_README.md
+IMPLEMENTATION_SUMMARY.md
+QUICK_REFERENCE.md
